--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -281,7 +281,7 @@
         <!--Image-->
         <scene sceneID="Ilb-mZ-qtL">
             <objects>
-                <viewController title="Image" id="qPx-5M-4aq" sceneMemberID="viewController">
+                <viewController title="Image" id="qPx-5M-4aq" customClass="FCPublishPhotoEditorVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qex-Lc-h80"/>
                         <viewControllerLayoutGuide type="bottom" id="5Bv-yx-M7x"/>
@@ -505,18 +505,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hp6-WS-luf">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K3e-6t-oEy">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="knb-ML-FSu" id="b9r-j2-kwl"/>
-                                </connections>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7ds-RQ-2pe">
-                                <rect key="frame" x="0.0" y="108" width="600" height="443"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hp6-WS-luf">
+                                        <rect key="frame" x="0.0" y="0.0" width="524" height="44"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="knb-ML-FSu" id="b9r-j2-kwl"/>
+                                        </connections>
+                                    </searchBar>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DZP-Rl-XNq">
+                                        <rect key="frame" x="524" y="7" width="76" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="76" id="hfN-nO-raA"/>
+                                        </constraints>
+                                        <state key="normal" title="Select">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="cqp-4f-EbR" kind="unwind" unwindAction="unwindFromAddressEditorVC:" id="M8c-XT-OvP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.792156862745098" green="0.792156862745098" blue="0.80784313725490198" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="DZP-Rl-XNq" firstAttribute="leading" secondItem="hp6-WS-luf" secondAttribute="trailing" id="7Kb-0U-v5O"/>
+                                    <constraint firstItem="hp6-WS-luf" firstAttribute="top" secondItem="K3e-6t-oEy" secondAttribute="top" id="O5s-BU-LxA"/>
+                                    <constraint firstAttribute="trailing" secondItem="DZP-Rl-XNq" secondAttribute="trailing" id="T9k-TS-D9k"/>
+                                    <constraint firstItem="DZP-Rl-XNq" firstAttribute="centerY" secondItem="hp6-WS-luf" secondAttribute="centerY" id="Y7B-Zh-mzb"/>
+                                    <constraint firstAttribute="bottom" secondItem="hp6-WS-luf" secondAttribute="bottom" id="hFi-aT-mZi"/>
+                                    <constraint firstItem="hp6-WS-luf" firstAttribute="leading" secondItem="K3e-6t-oEy" secondAttribute="leading" id="njx-mQ-f3q"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7ds-RQ-2pe">
+                                <rect key="frame" x="0.0" y="108" width="600" height="256"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="x67-aD-bnn">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="x67-aD-bnn">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x67-aD-bnn" id="lgL-YF-afv">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -530,6 +556,15 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7ds-RQ-2pe" firstAttribute="top" secondItem="K3e-6t-oEy" secondAttribute="bottom" id="1lX-WX-JeW"/>
+                            <constraint firstItem="7ds-RQ-2pe" firstAttribute="leading" secondItem="b3h-2F-mmh" secondAttribute="leading" id="3j3-9C-wVm"/>
+                            <constraint firstItem="7ds-RQ-2pe" firstAttribute="leading" secondItem="K3e-6t-oEy" secondAttribute="leading" id="W4Q-8Z-FS0"/>
+                            <constraint firstItem="JnO-dG-nBf" firstAttribute="top" secondItem="7ds-RQ-2pe" secondAttribute="bottom" constant="187" id="ZNP-8H-cxo"/>
+                            <constraint firstItem="K3e-6t-oEy" firstAttribute="top" secondItem="tuI-w1-NC6" secondAttribute="bottom" id="pl7-Jd-Lc6"/>
+                            <constraint firstItem="7ds-RQ-2pe" firstAttribute="trailing" secondItem="K3e-6t-oEy" secondAttribute="trailing" id="szf-qR-9EZ"/>
+                            <constraint firstAttribute="trailing" secondItem="7ds-RQ-2pe" secondAttribute="trailing" id="yPn-YM-Axi"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="searchBar" destination="hp6-WS-luf" id="YXv-sn-kkz"/>
@@ -537,6 +572,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SEV-YR-JYs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="cqp-4f-EbR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2058" y="1784"/>
         </scene>
